# teach-once

./: .gitignore  CHANGELOG.md  DEMO.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/css/: style.css
docs/js/: gp_infer.js  (+5 more)
reports/: FIGURE_INDEX.md  REPORT.md  experiment_log.md
scripts/: animate_armpose.py  animate_armpose_best.py  animate_cleaning.py  animate_cleaning_best.py  animate_franka_armpose.py  animate_franka_cleaning.py  animate_franka_reshelving.py  animate_highlight_reel.py  animate_highlight_reel_best.py  animate_impedance_armpose.py  animate_impedance_cleaning.py  animate_impedance_highlight.py  animate_impedance_reshelving.py  animate_reshelving.py  animate_reshelving_best.py  figure10_test_boxplots.py  figure11_multisource.py  figure15_cleaning_surfaces.py  figure16_force_profile.py  figure3_full.py  figure3_linear.py  figure5_scheme.py  figure6_uncertainty.py  figure7_cleaning_comparison.py  figure8_qualitative.py  figure9_boxplots.py  figure_armpose_3d.py  figure_reshelving_3d.py  make_gif_armpose.py  make_gif_cleaning.py  make_gif_highlight.py  make_gif_reshelving.py  render_scenes.py  run_multiframe_benchmark.py  run_multisource_benchmark.py  smoke_all.py  smoke_phase1.py  smoke_phase10.py  smoke_phase12.py  smoke_phase13.py  (+12 more)
tests/: test_baselines.py  test_cleaning_3d.py  test_ds_policy.py  test_envs.py  test_franka_env.py  test_franka_rollout.py  test_gp.py  test_impedance.py  test_linear_transport.py  test_multiframe.py  test_multisource.py  test_policy_transport.py  test_transport_3d.py  test_uncertainty.py
(+68 files in other folders)
