[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-repro"
version = "0.1.0"
description = "Reproduction of Franzese et al. 2024 — GP Transportation for task-parameterized dynamical systems (2D simulation portion)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "gpytorch>=1.11",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "similaritymeasures>=1.1",
    "hmmlearn>=0.3",
    "gymnasium>=0.29",
    "mujoco>=3.1",
    "imageio>=2.33",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]
video = ["imageio-ffmpeg>=0.4.9"]
viz = ["opencv-python>=4.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: long-running tests"]
